<resources>
    <string name="app_name">Cardlink Partner</string>
    <string name="active">ACTIVE</string>
    <string name="deactive">INACTIVE</string>
    <string name="offer_amount">Offer amount:</string>
    <string name="euro_symbol">€</string>
    <string name="network_not_connect">Network not connect.</string>
    <string name="menu_setting">Settings</string>
    <string name="edit">Edit</string>
    <string name="menu_home">Cardlink Partner</string>
    <string name="menu_console">Diagnose</string>
    <string name="spend">Purchase</string>
    <string name="offers">Reward Offers</string>
    <string name="transaction_management">Transaction Management</string>
    <string name="register_customer">Register</string>
    <string name="buy_gift">Buy gift</string>
    <string name="wallet_top_up">Wallet top up</string>
    <string name="menu_logout">Logout</string>
    <string name="language">English</string>
    <string name="offer_status">Offer status</string>
    <string name="update_offer_amount">Update offer amount</string>
    <string name="offer_detail">Offer Detail</string>
    <string name="update">Update</string>
    <string name="term_condition">Terms and Condition</string>
    <string name="privacy_policy">Privacy Policy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="about">About</string>
    <string name="offer_name">Offer name:</string>
    <string name="offer_desc">Offer description:</string>
    <string name="scan_or_phone">Enter phone or customer code</string>
    <string name="process_purchase">Purchase</string>
    <string name="verify_otp">Verify Code</string>
    <string name="select_outlet">Select outlet</string>
    <string name="enter_purchase_amount">Enter purchase amount</string>
    <string name="available_ewallet_balance">Available balance:</string>
    <string name="spend_from_ewallet">Redemption amount:</string>
    <string name="amount_due">Amount Due:</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <!-- Login -->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="english">English</string>
    <string name="greek">Eλληνικά</string>
    <!-- Forgot password -->
    <string name="submit">Submit</string>
    <string name="desc_forgot_pass">Enter email to receive link to reset password</string>
    <!-- Register -->
    <string name="register">Register</string>
    <string name="enter_customer_name">Enter customer name</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="desc_accept_register">Customer accepts T&#38;C and to join the reward scheme</string>
    <!-- Register Verify OTP-->
    <string name="verify_title">Code verification</string>
    <string name="verify_desc_1">A Code has been sent to:</string>
    <string name="verify_desc_2">Enter the code to verify.</string>
    <string name="verify_resend_otp">Resend code</string>
    <string name="create_customer">Create Customer</string>
    <string name="otp_verified">Code verified</string>
    <string name="btn_ok">OK</string>
    <string name="spend_sucessful">Transaction successful</string>
    <string name="update_offer_sucessful">Offer update successful</string>
    <string name="register_successful">Register customer successful</string>
    <string name="enter_login_info">Enter login info</string>
    <string name="sign_in">Welcome</string>
    <string name="switch_business">Switch business</string>
    <string name="system_error">System got error. Please try again.</string>
    <string name="cannot_connect_server">Cannot connect to server</string>
    <string name="connect_timeout">Connect to server timeout</string>
    <string name="forgot_password_success">Forgot password successful</string>
    <string name="forgot_password_failed">Forgot password failed</string>
    <string name="invalid_login">Invalid Login</string>
    <string name="login_success">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="change_offer_state_failed">Change offer state failed</string>
    <string name="change_offer_state_success">Change offer state successful</string>
    <string name="amount">Amount</string>
    <string name="change_offer_award_succes">Change offer award successful</string>
    <string name="change_offer_award_failed">Change offer award failed</string>
    <string name="cancel">Cancel</string>
    <string name="logout_msg">Are you sure you want to sign out?</string>
    <string name="logout_failed">Failed to sign out</string>
    <string name="posted">POSTED</string>
    <string name="cancelled">CANCELLED</string>
    <string name="cancel_purcharse_success">Void transaction successful</string>
    <string name="cancel_purcharse_unsuccess">Void transaction unsuccessful</string>
    <string name="card_or_phone_number">Input phone/code</string>
    <string name="euro_symbol_00">€0.00</string>
    <string name="please_select_outlet">Please select outlet</string>
    <string name="cannot_find_customer_info">Cannot find customer info</string>
    <string name="spend_failed">Transaction failed</string>
    <string name="transaction_detail">Transaction detail</string>
    <string name="many_requests">Too many Purchases in the same business. Please try again later</string>
    <string name="search_title">Search</string>
    <string name="cannot_open_deeplink_app">Unable to execute a transaction with a bank card</string>
    <string name="cannot_payment">Unable to complete transaction</string>
    <string name="cancel_payment_success">Cancel payment successful</string>
    <string name="cannot_cancel_payment">Cannot cancel payment</string>
    <string name="continue_title">Continue</string>
    <string name="void_trasaction">Void transaction</string>
    <string name="reference_number">Reference number</string>
    <string name="account_number">Account number</string>
    <string name="register_fail_contact_exists">Account already registered</string>
    <string name="invalid_otp">Invalid code</string>
    <string name="request_amount_not_more_purchase">Redemption amount should not be more than the purchase amount</string>
    <string name="request_amount_not_more_balance">Cannot spend more than the available balance</string>
    <string name="transaction_decline">Transaction decline</string>
    <string name="force_logout">Force logout</string>
    <string name="select_business">Select business</string>
    <string name="select_business_warn">Please select a business</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_username_password">User Name and Password are invalid </string>
    <string name="invalid_phone_number">Phone number length must be %s digits</string>

    <string name="chosse_register_or_verify_signup">Please chosse</string>
    <string name="signup_and_verify">Sign-up and verification</string>
    <string name="new_customer_registration">New customer registration</string>
    <string name="enter_phone_number_to_sign_up">Please enter phone number to complete the sign-up</string>
    <string name="send_otp">Send OTP</string>
    <string name="customer_ready_sigup">The customer has already signed up</string>
    <string name="customer_not_register">Customer not found. Please register!</string>

    <string name="from_date">From:</string>
    <string name="to_date">To:</string>
    <string name="sign_up_successful">Sign up complete!</string>
    <string name="cannot_find_customer_info_register">Customer not found! Do you want to register?</string>
    <string name="customer_not_signup">The customer has not been signed up, do you want to sign up?</string>
    <string name="input_must_8_digis">Please enter at least 8 digits</string>
    <string name="user_cancel_exit_button">User Cancel - exit button</string>
    <string name="user_cancel_on_back_press">User Cancel - on back pressed</string>
    <string name="transaction_timeout">Transaction Timeout</string>
    <string name="input_card_or_phone_number">Input phone/code</string>
    <string name="select_type">Select type</string>
    <string name="percentage">Percentage</string>
    <string name="amount_not_null">Amount not null</string>
    <string name="send_sms_success">The message is sent!</string>
    <string name="send_sms_fail">The message is not sent successfully. Please make sure that the phone number is valid.</string>
    <string name="send_email_success">The message is sent!</string>
    <string name="send_email_fail">The message is not sent successfully. Please make sure that the email is valid.</string>
    <string name="send_email_term_condition"><u>Send Term And Condition</u></string>
    <string name="confirm_send_term_condition">Term and Condition will be sent to your email</string>
    <string name="confirm_send_privacy_policy">Privacy Polocy will be sent to your email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
