<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_switch_business"
            android:icon="@drawable/ic_info_24"
            android:title="@string/switch_business" />
        <item
            android:id="@+id/app_bar_switch"
            android:icon="@drawable/ic_language_24"
            android:title="@string/language"
            app:actionLayout="@layout/switch_item" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
<!--        <item-->
<!--            android:id="@+id/nav_console"-->
<!--            android:icon="@drawable/ic_bug_report"-->
<!--            android:title="@string/menu_console" />-->
    </group>
</menu>