<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <include
        android:id="@+id/include"
        layout='@layout/custom_back_ground_mainpage'
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@drawable/page_background"
        android:orientation="vertical"
        android:padding="30dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textView10"
            style="@style/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/textView5"
            style="@style/text_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/email" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="8dp"
            android:background="@drawable/field_border"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <EditText
                android:id="@+id/edLoginUserName"
                style="@style/text_normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/Transparent"
                android:cursorVisible="true"
                android:ems="10"
                android:focusable="auto"
                android:inputType="textEmailAddress"
                android:textColor="@color/textBlack"
                android:textIsSelectable="false" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView6"
            style="@style/text_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="16dp"
            android:background="@drawable/field_border"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <EditText
                    android:id="@+id/edLoginPassword"
                    style="@style/text_normal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/Transparent"
                    android:cursorVisible="true"
                    android:ems="10"
                    android:focusable="auto"
                    android:focusableInTouchMode="true"
                    android:inputType="textPassword"
                    android:textColor="@color/textBlack"
                    android:textIsSelectable="false" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/btLoginIconPassword"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:src="@drawable/ic_eye_off_24" />
        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_primary_height"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false">

            <TextView
                android:id="@+id/btLoginSubmit"
                style="@style/button_secondary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/buttonDisable"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/login"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/White"
                android:textSize="18sp"
                android:textStyle="normal" />
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:paddingStart="32dp"
            android:paddingEnd="16dp">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbLoginEnglish"
                    style="@style/text_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:enabled="true"
                    android:text="@string/english" />

                <RadioButton
                    android:id="@+id/rbLoginGreek"
                    style="@style/text_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/greek" />
            </RadioGroup>


        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>