<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bsVerifyOtp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="16dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <include
        android:id="@+id/include"
        layout='@layout/custom_back_ground_mainpage'
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imgRegisterLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@mipmap/cardlink_logo"
                android:layout_marginBottom="@dimen/header_height"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txtRegisterVerifyOTPTitle"
                    style="@style/text_large"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/header_title_text_size"
                    android:text="@string/verify_title"/>
                <TextView
                    android:id="@+id/txtRegisterVerifyOTPDesc1"
                    style="@style/text_normal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/header_title_text_size"
                    android:text="@string/verify_desc_1"/>
                <TextView
                    android:id="@+id/txtRegisterVerifyOTPDesc2"
                    style="@style/text_normal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/header_title_text_size"
                    android:text="@string/verify_desc_2"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/spinner_background"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp">
                    <EditText
                        android:id="@+id/edRegisterFirstName"
                        style="@style/text_normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="true"
                        android:ems="10"
                        android:focusable="auto"
                        android:inputType="number"
                        android:textColor="@color/textBlack"
                        android:textIsSelectable="false"
                        android:backgroundTint="@color/Transparent"/>
                </RelativeLayout>

            </LinearLayout>
            <TextView
                android:id="@+id/btVerifyOTPResend"
                style="@style/text_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/verify_resend_otp"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/White"
                android:textSize="20sp"
                android:textStyle="normal" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_primary_height"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp"
                app:cardPreventCornerOverlap="false">

                <TextView
                    android:id="@+id/btVerifyOTPSubmit"
                    style="@style/button_primary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/verify_otp"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/White"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>