<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Spend2Fragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView2"
            style="@style/text_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Customer OTP" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="8dp"
            android:background="@drawable/field_border"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">
            <EditText
                android:id="@+id/edFragmentSpend2CustomerCode"
                style="@style/text_normal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:background="@color/Transparent"
                android:cursorVisible="true"
                android:ems="10"
                android:focusable="auto"
                android:hint="OTP"
                android:inputType="text"
                android:textColor="@color/textBlack"
                android:textIsSelectable="false" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView4"
                style="@style/text_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/available_ewallet_balance"
                android:textColor="@color/textSecondary" />

            <TextView
                android:id="@+id/tvFragmentSpend2EWalletBalance"
                style="@style/text_large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/textSecondary"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            style="@style/text_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/enter_purchase_amount" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="8dp"
            android:background="@drawable/field_border"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <EditText
                android:id="@+id/edFragmentSpend2Amount"
                style="@style/text_normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/Transparent"
                android:cursorVisible="true"
                android:ems="10"
                android:focusable="auto"
                android:inputType="number"
                android:textColor="@color/textBlack"
                android:textIsSelectable="false" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView8"
            style="@style/text_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/select_outlet" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="8dp"
            android:background="@drawable/field_border"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <Spinner
                android:id="@+id/snFragmentSpend2SelectOutlet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:spinnerMode="dropdown" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_down_24" />

        </RelativeLayout>

        <Switch
            android:id="@+id/swFragmentSpend2EWallet"
            style="@style/text_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/spend_from_ewallet"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginEnd="4dp"
                android:layout_weight="3"
                android:background="@drawable/field_border"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <EditText
                    android:id="@+id/edFragmentSpend2EWallet"
                    style="@style/text_normal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/Transparent"
                    android:cursorVisible="true"
                    android:ems="10"
                    android:enabled="false"
                    android:focusable="auto"
                    android:inputType="number"
                    android:textColor="@color/textGray" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="@dimen/button_secondary_height"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="2"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp"
                app:cardPreventCornerOverlap="false">

                <TextView
                    android:id="@+id/btFragmentSpend2VerifyOtp"
                    style="@style/button_secondary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/buttonDisable"
                    android:enabled="false"
                    android:gravity="center"
                    android:text="@string/verify_otp"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="normal" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                style="@style/text_large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/amount_due"
                android:textColor="@color/textSecondary" />

            <TextView
                android:id="@+id/tvFragmentSpend2AmountDue"
                style="@style/text_large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/textSecondary"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <RadioButton
                android:id="@+id/rbFragmentSpend2MethodCash"
                style="@style/text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/cash" />

            <RadioButton
                android:id="@+id/rbFragmentSpend2MethodCard"
                style="@style/text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/card" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_primary_height"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp"
                app:cardPreventCornerOverlap="false">

                <TextView
                    android:id="@+id/btFragmentSpend2ProcessPurchase"
                    style="@style/button_primary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/buttonDisable"
                    android:enabled="false"
                    android:gravity="center"
                    android:text="@string/process_purchase"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/White"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>